--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
         "statusBar.background": "#0b0518",
         "statusBarItem.hoverBackground": "#1e0e42",
         "statusBar.foreground": "#e7e7e7"
-    }
+    },
+    "peacock.color": "#0b0518"
 }
